--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "element-ui": "^1.4.3",
+    "fluent-ffmpeg": "^2.1.2",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6"
   },
